Add Patch for mappings and change path names
